--- a/index.html
+++ b/index.html
@@ -1,38 +1,20 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>恭喜，站点创建成功！</title>
-    <style>
-        .container {
-            width: 60%;
-            margin: 10% auto 0;
-            background-color: #f0f0f0;
-            padding: 2% 5%;
-            border-radius: 10px
-        }
-
-        ul {
-            padding-left: 20px;
-        }
-
-            ul li {
-                line-height: 2.3
-            }
-
-        a {
-            color: #20a53a
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>恭喜, 站点创建成功！</h1>
-        <h3>这是默认index.html，本页面由系统自动生成</h3>
-        <ul>
-            <li>本页面在FTP根目录下的index.html</li>
-            <li>您可以修改、删除或覆盖本页面</li>
-        </ul>
-    </div>
-</body>
-</html>
+<title>视频播放器 - DPlayer</title>
+<link href="DPlayer.min.css" rel="stylesheet">
+<script src="hls.min.js"></script>
+<script src="DPlayer.min.js"></script>
+<style type="text/css">
+    body,html{width:100%;height:100%;background:#000;padding:0;margin:0;overflow-x:hidden;overflow-y:hidden}
+    *{margin:0;border:0;padding:0;text-decoration:none}
+    #stats{position:fixed;top:5px;left:10px;font-size:12px;color:#fdfdfd;z-index:2147483647;text-shadow:1px 1px 1px #000, 1px 1px 1px #000}
+    #dplayer{position:inherit}
+</style>
+<div id="dplayer"></div>
+<script type="text/javascript">
+const dp = new DPlayer({
+container: document.getElementById('dplayer'),
+volume: 1,video: {quality: [
+{name: 'hls默认',url: 'sy/index1.m3u8',type: 'hls',},
+{name: 'mp4兼容',url: 'sy/index2.mp4',type: 'mp4',},
+],defaultQuality: 0,},
+contextmenu: [{text: '保存视频（mp4）',link: 'sy/index2.mp4',},],});
+</script>
