--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     #stats{position:fixed;top:5px;left:10px;font-size:12px;color:#fdfdfd;z-index:2147483647;text-shadow:1px 1px 1px #000, 1px 1px 1px #000}
     #dplayer{position:inherit}
 </style>
+<body oncontextmenu="self.event.returnValue=false">
 <div id="dplayer"></div>
 <script type="text/javascript">
 const dp = new DPlayer({
