--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ container: document.getElementById('dplayer'),
 volume: 1,video: {quality: [
 {name: 'hls默认',url: 'sy/index1.m3u8',type: 'hls',},
 {name: 'mp4兼容',url: 'sy/index2.mp4',type: 'mp4',},
+{name: 'mp4备用',url: '//download.kstore.space/download/4326/xygyfilesy.mp4',type: 'mp4',},
 ],defaultQuality: 0,},
-contextmenu: [{text: '保存视频（mp4）',link: 'sy/index2.mp4',},],});
+contextmenu: [
+{text: '保存视频（mp4兼容）',link: 'sy/index2.mp4',},
+{text: '保存视频（mp4备用）',link: '//download.kstore.space/download/4326/xygyfilesy.mp4',},
+],});
 </script>
