--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ volume: 1,video: {quality: [
 {name: 'mp4备用',url: '//download.kstore.space/download/4326/sy/index2.mp4',type: 'mp4',},
 ],defaultQuality: 0,},
 contextmenu: [
+{text: '前往哔哩哔哩观看',link: '//b23.tv/BV1BL411Y7iV',},
 {text: '保存视频（mp4兼容）',link: 'sy/index2.mp4',},
 {text: '保存视频（mp4备用）',link: '//download.kstore.space/download/4326/sy/index2.mp4',},
 ],});
