--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <style>
-	body,iframe{
-		padding:0;
-		margin:0;
-	}	
+body,iframe{
+padding:0;
+margin:0;
+}	
 </style>
 </head>
 <body>
-<iframe src="https://xiaoyonggaoya.pages.dev/luofuzazu" align="middle" frameborder="0" width="100%" height="100%" ></iframe>
+<iframe src="https://xiaoyonggaoya.pages.dev/luofuzazu.html" align="middle" frameborder="0" width="100%" height="100%" ></iframe>
 </body>
 </html>
