--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>罗浮杂俎</title>
 <style>
 body,iframe{
 padding:0;
@@ -9,6 +10,6 @@ margin:0;
 </style>
 </head>
 <body>
-<iframe src="https://xiaoyonggaoya.pages.dev/luofuzazu.html" align="middle" frameborder="0" width="100%" height="100%" ></iframe>
+<iframe src="https://ghostly.shenmedouyou.top" align="middle" frameborder="0" width="100%" height="100%" ></iframe>
 </body>
 </html>
