--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
+<link rel="icon" href="//ghostly.shenmedouyou.top/favicon.ico">
 <title>罗浮杂俎</title>
 <style>
 body,iframe{
@@ -10,6 +12,6 @@ margin:0;
 </style>
 </head>
 <body>
-<iframe src="https://ghostly.shenmedouyou.top" align="middle" frameborder="0" width="100%" height="100%" ></iframe>
+<iframe src="//ghostly.shenmedouyou.top" align="middle" frameborder="0" width="100%" height="100%" ></iframe>
 </body>
 </html>
