--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+<meta http-equiv=pragma content=no-cache>
+<meta http-equiv=cache-control content="no-cache, must-revalidate">
+<meta http-equiv=content-type content="text/html; charset=utf-8">
+<meta http-equiv=content-script-type content=text/javascript>
 <link rel="icon" href="//ghostly.shenmedouyou.top/favicon.ico">
 <title>罗浮杂俎</title>
 <style>
@@ -12,6 +15,6 @@ margin:0;
 </style>
 </head>
 <body>
-<iframe src="//ghostly.shenmedouyou.top" align="middle" frameborder="0" width="100%" height="100%" ></iframe>
+<iframe id="" name=" " src="//ghostly.shenmedouyou.top" align="middle" frameborder="0" width="100%" height="100%" ></iframe>
 </body>
 </html>
