--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv=pragma content=no-cache>
-<meta http-equiv=cache-control content="no-cache, must-revalidate">
-<meta http-equiv=content-type content="text/html; charset=utf-8">
-<meta http-equiv=content-script-type content=text/javascript>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="icon" href="//ghostly.shenmedouyou.top/favicon.ico">
 <title>罗浮杂俎</title>
 <style>
-	body,iframe{
-		padding:0;
-		margin:0;
-	}	
+html,body,iframe,div{padding:0;margin:0}
+body{font-family:Avenir,Helvetica,Arial,sans-serif;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
+html,body,.main{overflow:hidden}
+.main{color:#222;width:100vw;height:100vh;}
+.main-error{width:100%;height:100%;visibility:hidden;display:flex;justify-content:center;align-items:center;flex-direction:column}
+.main-error p{font-size:16px;color:#fff;line-height:21px;margin-top:24px;}
+.main-error a{color:#fff;cursor:pointer;border-radius: 30px;border: 1px solid rgba(255, 255, 255, 0.5);width:104px;text-align:center;font-size:16px;line-height: 40px;}
+.main-error a:hover {background: rgba(255, 255, 255, 0.1);}
+#iframe{border:0;width:100%;height:100%;visibility:hidden;position:absolute;top:0;left:0;z-index:1}
+.main#error .main-error {visibility: inherit;}
+.main#error #iframe {visibility: hidden}
+.main#success #iframe {visibility: inherit;}
+.main#success .main-error {visibility: hidden}
+/* .main#success .bg {visibility: hidden} */
+.main#loading #iframe, .main#loading .main-error {visibility: hidden}
+body {width:100vw;height:100vh;background-size: cover;}
 </style>
 </head>
 <body>
-<iframe id="" name=" " src="//ghostly.shenmedouyou.top" align="middle" frameborder="0" width="100%" height="100%" ></iframe>
+<iframe src="//ghostly.shenmedouyou.top" id="iframe"></iframe>
 </body>
 </html>
