--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" href="//ghostly.shenmedouyou.top/favicon.ico">
+<link rel="icon" href="https://ghostly.shenmedouyou.top/favicon.ico">
 <title>罗浮杂俎</title>
 <style>
 html,body,iframe,div{padding:0;margin:0}
@@ -25,6 +25,6 @@ body {width:100vw;height:100vh;background-size: cover;}
 </style>
 </head>
 <body>
-<iframe src="//ghostly.shenmedouyou.top" id="iframe"></iframe>
+<iframe src="https://ghostly.shenmedouyou.top" id="iframe"></iframe>
 </body>
 </html>
