--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 <title>罗浮杂俎</title>
 </head>
 <body>
-<iframe src="https://ghostly.shenmedouyou.top" id="iframe"></iframe>
+<iframe id="iframe" name="iframe" height="100%" width="100%" src="https://ghostly.shenmedouyou.top" scrolling="auto" frameborder="0" onload="changeFrameHeight()"></iframe>
+<script>
+    function changeFrameHeight() {
+        var iframe = document.getElementById("iframe");
+        iframe.height = document.documentElement.clientHeight;
+    }
+    //onresize属性可以用来获取或设置当前窗口的resize事件的事件处理函数
+    //onresize事件会在窗口或框架被调整大小时发生
+    window.onresize = function() {
+        changeFrameHeight();
+    }
+</script>
 </body>
 </html>
