--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" href="https://ghostly.shenmedouyou.top/favicon.ico">
-<title>罗浮杂俎</title>
-</head>
-<body style="background-color:#000000;overflow:hidden">
-<iframe id="iframe" name="iframe" height="100%" width="100%" src="https://ghostly.shenmedouyou.top" scrolling="auto" frameborder="0" onload="changeFrameHeight()"></iframe>
-<script>
-    function changeFrameHeight() {
-        var iframe = document.getElementById("iframe");
-        iframe.height = document.documentElement.clientHeight;
-    }
-    window.onresize = function() {
-        changeFrameHeight();
-    }
-</script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8"><link rel="icon" href="https://ghostly.shenmedouyou.top/favicon.ico"><title>罗浮杂俎</title></head><body style="background-color:#000000;overflow:hidden"><iframe id="iframe" name="iframe" height="100%" width="100%" src="https://ghostly.shenmedouyou.top" scrolling="auto" frameborder="0" onload="changeFrameHeight()"></iframe><script>function changeFrameHeight() {var iframe = document.getElementById("iframe");iframe.height = document.documentElement.clientHeight;}window.onresize = function() {changeFrameHeight();}</script></body></html>
